Updated to working

--- a/centos-flask/root/etc/nginx/nginx.conf
+++ b/centos-flask/root/etc/nginx/nginx.conf
@@ -40,7 +40,8 @@ http {
         error_log  /var/log/nginx/error.log;
 
         location / {
-            proxy_pass         http://127.0.0.1:8000/;
+            uwsgi_pass unix:/run/onica/onica.sock;
+            include uwsgi_params;
             proxy_redirect     off;
 
             proxy_set_header   Host                 $host;
