--- a/centos-flask/root/opt/onica-hello-world/onica.ini
+++ b/centos-flask/root/opt/onica-hello-world/onica.ini
@@ -4,8 +4,11 @@ module = wsgi
 master = true
 processes = 5
 
-socket = myproject.sock
+socket = /run/%n/onica.sock
 chmod-socket = 660
 vacuum = true
 
 die-on-term = true
+workdir = /opt/onica-hello-world
+processes = 4
+threads = 2
