That's right egress needs to be defined without GroupId and with DestinationSecurityGroupId

--- a/approach1.cft.yaml
+++ b/approach1.cft.yaml
@@ -527,7 +527,7 @@ Resources:
       - IpProtocol: tcp
         FromPort: 80
         ToPort: 80
-        GroupId: !GetAtt InstanceSG.GroupId
+        DestinationSecurityGroupId: !GetAtt InstanceSG.GroupId
 
   InstanceSG:
     Type: AWS::EC2::SecurityGroup
