ELB: Value of property SecurityGroups must be of type List of String

--- a/approach1.cft.yaml
+++ b/approach1.cft.yaml
@@ -500,7 +500,7 @@ Resources:
   ElasticLoadBalancer:
     Type: AWS::ElasticLoadBalancing::LoadBalancer
     Properties:
-      SecurityGroups: !Ref ELBSG
+      SecurityGroups: [!Ref ELBSG]
       Subnets: [!Ref PublicSubnetB, !Ref PublicSubnetA ]
       CrossZone: true
       Listeners:
