--- a/approach1.cft.yaml
+++ b/approach1.cft.yaml
@@ -32,33 +32,6 @@ Parameters:
     AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
     ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
 Mappings:
-  Region2Examples:
-    us-east-1:
-      Examples: https://s3.amazonaws.com/cloudformation-examples-us-east-1
-    us-west-2:
-      Examples: https://s3-us-west-2.amazonaws.com/cloudformation-examples-us-west-2
-    us-west-1:
-      Examples: https://s3-us-west-1.amazonaws.com/cloudformation-examples-us-west-1
-    eu-west-1:
-      Examples: https://s3-eu-west-1.amazonaws.com/cloudformation-examples-eu-west-1
-    eu-central-1:
-      Examples: https://s3-eu-central-1.amazonaws.com/cloudformation-examples-eu-central-1
-    ap-southeast-1:
-      Examples: https://s3-ap-southeast-1.amazonaws.com/cloudformation-examples-ap-southeast-1
-    ap-northeast-1:
-      Examples: https://s3-ap-northeast-1.amazonaws.com/cloudformation-examples-ap-northeast-1
-    ap-northeast-2:
-      Examples: https://s3-ap-northeast-2.amazonaws.com/cloudformation-examples-ap-northeast-2
-    ap-southeast-2:
-      Examples: https://s3-ap-southeast-2.amazonaws.com/cloudformation-examples-ap-southeast-2
-    ap-south-1:
-      Examples: https://s3-ap-south-1.amazonaws.com/cloudformation-examples-ap-south-1
-    us-east-2:
-      Examples: https://s3-us-east-2.amazonaws.com/cloudformation-examples-us-east-2
-    sa-east-1:
-      Examples: https://s3-sa-east-1.amazonaws.com/cloudformation-examples-sa-east-1
-    cn-north-1:
-      Examples: https://s3.cn-north-1.amazonaws.com.cn/cloudformation-examples-cn-north-1
   AWSInstanceType2Arch:
     t1.micro:
       Arch: PV64
@@ -166,113 +139,6 @@ Mappings:
       Arch: HVM64
     cc2.8xlarge:
       Arch: HVM64
-  AWSInstanceType2NATArch:
-    t1.micro:
-      Arch: NATPV64
-    t2.nano:
-      Arch: NATHVM64
-    t2.micro:
-      Arch: NATHVM64
-    t2.small:
-      Arch: NATHVM64
-    t2.medium:
-      Arch: NATHVM64
-    t2.large:
-      Arch: NATHVM64
-    m1.small:
-      Arch: NATPV64
-    m1.medium:
-      Arch: NATPV64
-    m1.large:
-      Arch: NATPV64
-    m1.xlarge:
-      Arch: NATPV64
-    m2.xlarge:
-      Arch: NATPV64
-    m2.2xlarge:
-      Arch: NATPV64
-    m2.4xlarge:
-      Arch: NATPV64
-    m3.medium:
-      Arch: NATHVM64
-    m3.large:
-      Arch: NATHVM64
-    m3.xlarge:
-      Arch: NATHVM64
-    m3.2xlarge:
-      Arch: NATHVM64
-    m4.large:
-      Arch: NATHVM64
-    m4.xlarge:
-      Arch: NATHVM64
-    m4.2xlarge:
-      Arch: NATHVM64
-    m4.4xlarge:
-      Arch: NATHVM64
-    m4.10xlarge:
-      Arch: NATHVM64
-    c1.medium:
-      Arch: NATPV64
-    c1.xlarge:
-      Arch: NATPV64
-    c3.large:
-      Arch: NATHVM64
-    c3.xlarge:
-      Arch: NATHVM64
-    c3.2xlarge:
-      Arch: NATHVM64
-    c3.4xlarge:
-      Arch: NATHVM64
-    c3.8xlarge:
-      Arch: NATHVM64
-    c4.large:
-      Arch: NATHVM64
-    c4.xlarge:
-      Arch: NATHVM64
-    c4.2xlarge:
-      Arch: NATHVM64
-    c4.4xlarge:
-      Arch: NATHVM64
-    c4.8xlarge:
-      Arch: NATHVM64
-    g2.2xlarge:
-      Arch: NATHVMG2
-    g2.8xlarge:
-      Arch: NATHVMG2
-    r3.large:
-      Arch: NATHVM64
-    r3.xlarge:
-      Arch: NATHVM64
-    r3.2xlarge:
-      Arch: NATHVM64
-    r3.4xlarge:
-      Arch: NATHVM64
-    r3.8xlarge:
-      Arch: NATHVM64
-    i2.xlarge:
-      Arch: NATHVM64
-    i2.2xlarge:
-      Arch: NATHVM64
-    i2.4xlarge:
-      Arch: NATHVM64
-    i2.8xlarge:
-      Arch: NATHVM64
-    d2.xlarge:
-      Arch: NATHVM64
-    d2.2xlarge:
-      Arch: NATHVM64
-    d2.4xlarge:
-      Arch: NATHVM64
-    d2.8xlarge:
-      Arch: NATHVM64
-    hi1.4xlarge:
-      Arch: NATHVM64
-    hs1.8xlarge:
-      Arch: NATHVM64
-    cr1.8xlarge:
-      Arch: NATHVM64
-    cc2.8xlarge:
-      Arch: NATHVM64
   AWSRegionArch2AMI:
     us-east-1:
       PV64: ami-2a69aa47
@@ -523,11 +389,6 @@ Resources:
         FromPort: 80
         ToPort: 80
         CidrIp: 0.0.0.0/0
-      SecurityGroupEgress:
-      - IpProtocol: tcp
-        FromPort: 80
-        ToPort: 80
-        DestinationSecurityGroupId: !GetAtt InstanceSG.GroupId
 
   InstanceSG:
     Type: AWS::EC2::SecurityGroup
@@ -539,7 +400,7 @@ Resources:
         FromPort: 22
         ToPort: 22
         CidrIp: !Ref SSHLocation
-  ELBIngreetoWebserver:
+  ELBIngresstoWebserver:
     Type: AWS::EC2::SecurityGroupIngress
     Properties:
       IpProtocol: tcp
