--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,7 +16,7 @@ phases:
       - echo "Starting build `date` in `pwd`"
       - aws s3 cp onica-helloworld.tar.gz s3://$ROOTDIRBUCKET/
       - test -e app-sam.yaml && aws cloudformation package --template-file app-sam.yaml --s3-bucket $BUILD_OUTPUT_BUCKET --output-template-file app-output_sam.yaml
-      - aws cloudformation package --template-file test-sam.yaml --s3-bucket $BUILD_OUTPUT_BUCKET --output-template-file test-output_sam.yaml
+      - aws cloudformation package --template-file approach1.cft.yaml --s3-bucket $BUILD_OUTPUT_BUCKET --output-template-file approach1.yaml
       - sed -i '/DefinitionUri/d' app-output_sam.yaml
       - echo "build completed on `date`"
 
