Forgot to update my artifacts

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,6 +23,7 @@ phases:
 
 artifacts:
   files:
-    - app-output_sam.yaml
-    - test-output_sam.yaml
+    - approach1.yaml
+    # - app-output_sam.yaml
+    # - test-output_sam.yaml
   discard-paths: yes
