Yay more mismatch in naming from one template to the next

--- a/approach1.cft.yaml
+++ b/approach1.cft.yaml
@@ -225,7 +225,7 @@ Resources:
                   Statement:
                     - Effect: Allow
                       Resource:
-                        - !Sub 'arn:aws:s3:::${HelloWorldRoot}/*'
+                        - !Sub 'arn:aws:s3:::${RootDirBucket}/*'
                       Action: 
                         - 's3:GetObject'
 
