Adding back in the assumerole for the ec2 server role

--- a/approach1.cft.yaml
+++ b/approach1.cft.yaml
@@ -217,6 +217,15 @@ Resources:
   WebServerInstanceRole:
       Type: AWS::IAM::Role
       Properties:
+          AssumeRolePolicyDocument:
+              Version: '2012-10-17'
+              Statement:
+                - Action: 
+                    - 'sts:AssumeRole'
+                  Effect: Allow
+                  Principal:
+                    Service:
+                      - ec2.amazonaws.com
           Path: /
           Policies:
               - PolicyName: WebServerInstance
