--- a/approach1.cft.yaml
+++ b/approach1.cft.yaml
@@ -237,7 +237,12 @@ Resources:
                         - !Sub 'arn:aws:s3:::${RootDirBucket}/*'
                       Action: 
                         - 's3:GetObject'
-
+  WebServerInstanceProfile:
+    Type: AWS::IAM::InstanceProfile
+    Properties:
+      Path: /
+      Roles: 
+        - !Ref WebServerInstanceRole
   NotificationTopic:
     Type: AWS::SNS::Topic
     Properties:
@@ -331,7 +336,7 @@ Resources:
                 ensureRunning: true
                 files: [/etc/cfn/cfn-hup.conf, /etc/cfn/hooks.d/cfn-auto-reloader.conf]
     Properties:
-      IamInstanceProfile: !Ref WebServerInstanceRole
+      IamInstanceProfile: !Ref WebServerInstanceProfile
       AssociatePublicIpAddress: True
       KeyName: !Ref 'KeyName'
       ImageId: !FindInMap [AWSRegionArch2AMI, !Ref 'AWS::Region', !FindInMap [AWSInstanceType2Arch,
