--- a/approach1.cft.yaml
+++ b/approach1.cft.yaml
@@ -1,9 +1,6 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Description: Deploy a Flask Application with rendering displaying a landing page including the server name
 Parameters:
-  RootDirBucket:
-    Description: S3 Bucket name for the root dir tarball
-    Type: String
   InstanceType:
     Description: WebServer EC2 instance type
     Type: String
@@ -214,35 +211,6 @@ Resources:
       VpcId: !Ref VPC
       CidrBlock: 172.17.43.64/26
       AvailabilityZone: "us-east-2a"
-  WebServerInstanceRole:
-      Type: AWS::IAM::Role
-      Properties:
-          AssumeRolePolicyDocument:
-              Version: '2012-10-17'
-              Statement:
-                - Action: 
-                    - 'sts:AssumeRole'
-                  Effect: Allow
-                  Principal:
-                    Service:
-                      - ec2.amazonaws.com
-          Path: /
-          Policies:
-              - PolicyName: WebServerInstance
-                PolicyDocument:
-                  Version: '2012-10-17'
-                  Statement:
-                    - Effect: Allow
-                      Resource:
-                        - !Sub 'arn:aws:s3:::${RootDirBucket}/*'
-                      Action: 
-                        - 's3:GetObject'
-  WebServerInstanceProfile:
-    Type: AWS::IAM::InstanceProfile
-    Properties:
-      Path: /
-      Roles: 
-        - !Ref WebServerInstanceRole
   NotificationTopic:
     Type: AWS::SNS::Topic
     Properties:
@@ -285,50 +253,312 @@ Resources:
               python36-devel: []
               gcc: []
               nginx: []
+              python36-virtualenv: []
           files:
+            /opt/onica-hello-world/templates/hello.html:
+              content: !Join
+                - "\n"
+                - - '<!doctype html>'
+                  - "<title>Chill. Relax. I'm a Panda.</title>"
+                  - '<center>'
+                  - "<h1>Chill. Relax. I'm a Panda.</h1>"
+                  - '<br />'
+                  - '<img src="http://gallery.stoneydavis.com/panda.jpg">'
+                  - '<br />'
+                  - 'This software is running on the host: {{hostname}}'
+                  - '<br />'
+                  - '</center>'
+                  - ''
+            /opt/onica-hello-world/wsgi.py:
+              content: !Join
+                - "\n"
+                - - 'from onica import app as application'
+                  - ''
+                  - 'if __name__ == "__main__":'
+                  - '    application.run()'
+                  - ''
+            /opt/onica-hello-world/onica.ini:
+              content: !Join
+                - "\n"
+                - - '[uwsgi]'
+                  - 'module = wsgi'
+                  - ''
+                  - 'master = true'
+                  - 'processes = 5'
+                  - ''
+                  - 'socket = /run/%n/onica.sock'
+                  - 'chmod-socket = 660'
+                  - 'vacuum = true'
+                  - ''
+                  - 'die-on-term = true'
+                  - 'workdir = /opt/onica-hello-world'
+                  - 'processes = 4'
+                  - 'threads = 2'
+                  - ''
+            /opt/onica-hello-world/onica.py:
+              content: !Join
+                - "\n"
+                - - 'import socket'
+                  - 'from flask import Flask'
+                  - 'app = Flask(__name__)'
+                  - ''
+                  - 'from flask import render_template'
+                  - 'from werkzeug.contrib.fixers import ProxyFix'
+                  - 'app.wsgi_app = ProxyFix(app.wsgi_app)'
+                  - ''
+                  - '@app.route("/")'
+                  - 'def hello(name=None):'
+                  - '    return render_template("hello.html", hostname=socket.getfqdn())'
+                  - ''
+                  - 'if __name__ == "__main__":'
+                  - '    app.run(host="0.0.0.0")'
+                  - ''
+            # /etc/systemd/system/onica.service:
+            #   content: !Join
+            #     - "\n"
+            #     - - "[Unit]"
+            #       - "Description=uWSGI Emperor"
+            #       - "After=syslog.target"
+            #       - "Requires=nginx"
+            #       - "After=nginx.service"
+            #       - ""
+            #       - "[Service]"
+            #       - "User=nginx"
+            #       - "Group=nginx"
+            #       - "ExecStart=/opt/onica-hello-world/onica-hello-world/bin/uwsgi --ini /opt/onica-hello-world/onica.ini"
+            #       - "# Requires systemd version 211 or newer"
+            #       - "RuntimeDirectory=onica"
+            #       - "WorkingDirectory=/opt/onica-hello-world"
+            #       - "Restart=always"
+            #       - "KillSignal=SIGQUIT"
+            #       - "Type=notify"
+            #       - "StandardError=syslog"
+            #       - "NotifyAccess=all"
+            #       - ""
+            #       - "[Install]"
+            #       - "WantedBy=multi-user.target"
+            #       - ''
+            /etc/init.d/onica:
+              content: !Join
+                - "\n"
+                - - '#!/usr/bin/env bash'
+                  - ''
+                  - '### BEGIN INIT INFO'
+                  - '# Provides:          uwsgi-emperor'
+                  - '# Required-Start:    $all'
+                  - '# Required-Stop:     $all'
+                  - '# Default-Start:     2 3 4 5'
+                  - '# Default-Stop:      0 1 6'
+                  - '# Short-Description: starts the uwsgi emperor app server'
+                  - '# Description:       starts uwsgi emperor app server using start-stop-daemon'
+                  - '### END INIT INFO'
+                  - 'set -e'
+                  - ''
+                  - ''
+                  - 'PATH=/sbin:/bin:/usr/sbin:/usr/bin'
+                  - 'DAEMON=/opt/onica-hello-world/onica-hello-world/bin/uwsgi'
+                  - 'RUN_DIR=/var/run/onica'
+                  - 'LOG_DIR=/var/log/onica'
+                  - 'NAME=onica'
+                  - 'DESC=onica'
+                  - 'OWNER=nginx'
+                  - 'GROUP=nginx'
+                  - ''
+                  - '[[ -x $DAEMON ]] || exit 0'
+                  - '[[ -d $RUN_DIR ]] || mkdir $RUN_DIR && chown $OWNER:$GROUP $RUN_DIR'
+                  - '[[ -d $LOG_DIR ]] || mkdir $LOG_DIR && chown $OWNER:$GROUP $LOG_DIR'
+                  - ''
+                  - 'do_pid_check()'
+                  - '{'
+                  - '    local PIDFILE=$1'
+                  - '    [[ -f $PIDFILE ]] || return 0'
+                  - '    local PID=$(cat $PIDFILE)'
+                  - '    for p in $(pgrep $NAME); do'
+                  - '        [[ $p == $PID ]] && return 1'
+                  - '    done'
+                  - '    return 0'
+                  - '}'
+                  - ''
+                  - ''
+                  - 'do_start()'
+                  - '{'
+                  - '    local PIDFILE=$RUN_DIR/$NAME.pid'
+                  - '    local START_OPTS=" \'
+                  - '        --ini /opt/onica-hello-world/onica.ini'
+                  - '        --pidfile $PIDFILE \'
+                  - '        --uid $OWNER \'
+                  - '        --gid $GROUP \'
+                  - '        --daemonize $LOG_DIR/onica.log"'
+                  - '    if do_pid_check $PIDFILE; then'
+                  - '        $DAEMON $START_OPTS'
+                  - '    else'
+                  - '        echo "Already running!"'
+                  - '    fi'
+                  - '}'
+                  - ''
+                  - 'send_sig()'
+                  - '{'
+                  - '    local PIDFILE=$RUN_DIR/$NAME.pid'
+                  - '    set +e'
+                  - '    [[ -f $PIDFILE ]] && kill $1 $(cat $PIDFILE) > /dev/null 2>&1'
+                  - '    set -e'
+                  - '}'
+                  - ''
+                  - 'wait_and_clean_pidfile()'
+                  - '{'
+                  - '    local PIDFILE=$RUN_DIR/$NAME.pid'
+                  - '    until do_pid_check $PIDFILE; do'
+                  - '        echo -n "";'
+                  - '    done'
+                  - '    rm -f $PIDFILE'
+                  - '}'
+                  - ''
+                  - 'do_stop()'
+                  - '{'
+                  - '    send_sig -3'
+                  - '    wait_and_clean_pidfile'
+                  - '}'
+                  - ''
+                  - 'do_reload()'
+                  - '{'
+                  - '    send_sig -1'
+                  - '}'
+                  - ''
+                  - 'do_force_reload()'
+                  - '{'
+                  - '    send_sig -15'
+                  - '}'
+                  - ''
+                  - 'get_status()'
+                  - '{'
+                  - '    send_sig -10'
+                  - '}'
+                  - ''
+                  - 'case "$1" in'
+                  - '    start)'
+                  - '        echo "Starting $DESC: "'
+                  - '        do_start'
+                  - '        echo "$NAME."'
+                  - '        ;;'
+                  - '    stop)'
+                  - '        echo -n "Stopping $DESC: "'
+                  - '        do_stop'
+                  - '        echo "$NAME."'
+                  - '        ;;'
+                  - '    reload)'
+                  - '        echo -n "Reloading $DESC: "'
+                  - '        do_reload'
+                  - '        echo "$NAME."'
+                  - '        ;;'
+                  - '    force-reload)'
+                  - '        echo -n "Force-reloading $DESC: "'
+                  - '        do_force_reload'
+                  - '        echo "$NAME."'
+                  - '       ;;'
+                  - '    restart)'
+                  - '        echo  "Restarting $DESC: "'
+                  - '        do_stop'
+                  - '        sleep 1'
+                  - '        do_start'
+                  - '        echo "$NAME."'
+                  - '        ;;'
+                  - '    status)'
+                  - '        get_status'
+                  - '        ;;'
+                  - '    *)'
+                  - '        N=/etc/init.d/$NAME'
+                  - '        echo "Usage: $N {start|stop|restart|reload|force-reload|status}">&2'
+                  - '        exit 1'
+                  - '        ;;'
+                  - 'esac'
+                  - 'exit 0'
+            /etc/nginx/nginx.conf:
+              content: !Join
+                - "\n"
+                - - "user nginx;"
+                  - "worker_processes auto;"
+                  - "error_log /var/log/nginx/error.log;"
+                  - "pid /run/nginx.pid;"
+                  - ""
+                  - "# Load dynamic modules. See /usr/share/nginx/README.dynamic."
+                  - "include /usr/share/nginx/modules/*.conf;"
+                  - ""
+                  - "events {"
+                  - "    worker_connections 1024;"
+                  - "}"
+                  - ""
+                  - "http {"
+                  - "    log_format  main  '$remote_addr - $remote_user [$time_local] \"$request\" '"
+                  - "                      '$status $body_bytes_sent \"$http_referer\" '"
+                  - "                      '\"$http_user_agent\" \"$http_x_forwarded_for\"';"
+                  - "    access_log  /var/log/nginx/access.log  main;"
+                  - "    sendfile            on;"
+                  - "    tcp_nopush          on;"
+                  - "    tcp_nodelay         on;"
+                  - "    keepalive_timeout   65;"
+                  - "    types_hash_max_size 2048;"
+                  - "    include             /etc/nginx/mime.types;"
+                  - "    default_type        application/octet-stream;"
+                  - "    # Load modular configuration files from the /etc/nginx/conf.d directory."
+                  - "    # See http://nginx.org/en/docs/ngx_core_module.html#include"
+                  - "    # for more information."
+                  - "    include /etc/nginx/conf.d/*.conf;"
+                  - "    server {"
+                  - "        listen 80;"
+                  - "        server_name _;"
+                  - "        access_log  /var/log/nginx/access.log;"
+                  - "        error_log  /var/log/nginx/error.log;"
+                  - "        location / {"
+                  - "            uwsgi_pass unix:/run/onica/onica.sock;"
+                  - "            include uwsgi_params;"
+                  - "            proxy_redirect     off;"
+                  - "            proxy_set_header   Host                 $host;"
+                  - "            proxy_set_header   X-Real-IP            $remote_addr;"
+                  - "            proxy_set_header   X-Forwarded-For      $proxy_add_x_forwarded_for;"
+                  - "            proxy_set_header   X-Forwarded-Proto    $scheme;"
+                  - "        }"
+                  - "        include /etc/nginx/default.d/*.conf;"
+                  - "    }"
+                  - " }"
+                  - ''
             /etc/cfn/cfn-hup.conf:
-              content: !Join ['', ['[main]
-
-                    ', stack=, !Ref 'AWS::StackId', '
-
-                    ', region=, !Ref 'AWS::Region', '
-
-                    ']]
+              content: !Join
+                - "\n"
+                - - "[main]"
+                  - !Sub "stack=${AWS::StackId}"
+                  - !Sub "region=${AWS::Region}"
+                  - ''
               mode: '000400'
               owner: root
               group: root
             /etc/cfn/hooks.d/cfn-auto-reloader.conf:
-              content: !Join ['', ['[cfn-auto-reloader-hook]
-
-                    ', 'triggers=post.update
-
-                    ', 'path=Resources.LaunchConfig.Metadata.AWS::CloudFormation::Init
-
-                    ', 'action=/opt/aws/bin/cfn-init -v ', '         --stack ', !Ref 'AWS::StackName',
-                  '         --resource LaunchConfig ', '         --region ', !Ref 'AWS::Region',
-                  '
-
-                    ', 'runas=root
-
-                    ']]
-          sources:
-            /: !Sub "https://${RootDirBucket}.s3.amazonaws.com/onica-helloworld.tar.gz"
+              content: !Join
+                - "\n"
+                - - "[cfn-auto-reloader-hook]"
+                  - "triggers=post.update"
+                  - "path=Resources.LaunchConfig.Metadata.AWS::CloudFormation::Init"
+                  - !Sub "action=/opt/aws/bin/cfn-init -v ${AWS::StackName} --resource LaunchConfig --region ${AWS::Region}"
+                  - "runas=root"
+                  - ''
+          # sources:
+          #   /: !Sub "https://${RootDirBucket}.s3.amazonaws.com/onica-helloworld.tar.gz"
           commands:
-            installpip:
+            01_installpip:
               command: curl https://bootstrap.pypa.io/get-pip.py | python3.6
-            installvirtualenv:
-              command: pip3.6 install virtualenv
-            createvirtualenv:
+            02_createvirtualenv:
               cwd: /opt/onica-hello-world
               command: virtualenv onica-hello-world
-            installdepends:
+            03_installdepends:
               command: source onica-hello-world/bin/activate && pip install uwsgi flask
               cwd: /opt/onica-hello-world
-            fixperms:
+            04_fixperms:
               command: "chown -R nginx: /opt/onica-hello-world"
           services:
             sysvinit:
-              httpd:
+              nginx:
+                enabled: true
+                ensureRunning: true
+              onica:
                 enabled: true
                 ensureRunning: true
               cfn-hup:
@@ -336,7 +566,6 @@ Resources:
                 ensureRunning: true
                 files: [/etc/cfn/cfn-hup.conf, /etc/cfn/hooks.d/cfn-auto-reloader.conf]
     Properties:
-      IamInstanceProfile: !Ref WebServerInstanceProfile
       AssociatePublicIpAddress: True
       KeyName: !Ref 'KeyName'
       ImageId: !FindInMap [AWSRegionArch2AMI, !Ref 'AWS::Region', !FindInMap [AWSInstanceType2Arch,
@@ -421,7 +650,6 @@ Resources:
         FromPort: 80
         ToPort: 80
         CidrIp: 0.0.0.0/0
-
   InstanceSG:
     Type: AWS::EC2::SecurityGroup
     Properties:
