--- a/approach1.cft.yaml
+++ b/approach1.cft.yaml
@@ -423,6 +423,8 @@ Resources:
           commands:
             01_make_exec:
               command: chmod +x /etc/init.d/onica
+            02_start:
+              command: /etc/init.d/onica start
           files:
             # /etc/systemd/system/onica.service:
             #   content: !Join
@@ -597,6 +599,7 @@ Resources:
           - yum update -y aws-cfn-bootstrap
           - !Sub '/opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource LaunchConfig --region ${AWS::Region}'
           - !Sub '/opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WebServerGroup --region ${AWS::Region}'
+          - 'echo "Version 0.0.2'
           - ''
   WebServerScaleUpPolicy:
     Type: AWS::AutoScaling::ScalingPolicy
