--- a/approach1.cft.yaml
+++ b/approach1.cft.yaml
@@ -1,6 +1,15 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Description: Deploy a Flask Application with rendering displaying a landing page including the server name
 Parameters:
+  # CfnKey:
+  #   Type: String
+  #   Description: CfnKey for S3 Bucket Access for CloudInit
+  # SecretAccessKey:
+  #   Type: String
+  #   Description: SecretAccessKey for S3 Bucket Access for CloudInit
+  # BucketName:
+  #   Type: String
+  #   Description: BucketName for S3 Bucket for CloudInit
   InstanceType:
     Description: WebServer EC2 instance type
     Type: String
@@ -244,6 +253,12 @@ Resources:
     Type: AWS::AutoScaling::LaunchConfiguration
     Metadata:
       Comment: Install a simple application
+      # AWS::CloudFormation::Authentication:
+      #   S3AccessCreds:
+      #     type: S3
+      #     accessKeyId: !Ref CfnKey
+      #     secretKey: !Ref SecretAccessKey
+      #     buckets: !Ref BucketName
       AWS::CloudFormation::Init:
         configSets: 
           default:
@@ -474,6 +489,7 @@ Resources:
                   - 'DAEMON=/opt/onica-hello-world/onica-hello-world/bin/uwsgi'
                   - 'RUN_DIR=/var/run/onica'
                   - 'LOG_DIR=/var/log/onica'
+                  - 'WORK_DIR=/opt/onica-hello-world'
                   - 'NAME=onica'
                   - 'DESC=onica'
                   - 'OWNER=nginx'
@@ -505,6 +521,7 @@ Resources:
                   - '        --gid $GROUP \'
                   - '        --daemonize $LOG_DIR/onica.log"'
                   - '    if do_pid_check $PIDFILE; then'
+                  - '        cd $WORK_DIR'
                   - '        $DAEMON $START_OPTS'
                   - '    else'
                   - '        echo "Already running!"'
@@ -601,7 +618,7 @@ Resources:
           - yum update -y aws-cfn-bootstrap
           - !Sub '/opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource LaunchConfig --region ${AWS::Region}'
           - !Sub '/opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WebServerGroup --region ${AWS::Region}'
-          - 'echo "Version 0.0.3'
+          - 'echo "Version 0.0.4'
           - ''
   WebServerScaleUpPolicy:
     Type: AWS::AutoScaling::ScalingPolicy
