--- a/approach1.cft.yaml
+++ b/approach1.cft.yaml
@@ -308,14 +308,15 @@ Resources:
           commands:
             02_createvirtualenv:
               cwd: /opt/onica-hello-world
-              command: virtualenv onica-hello-world
+              command: virtualenv-3.6 onica-hello-world
             03_installdepends:
-              command: source onica-hello-world/bin/activate && pip install uwsgi flask
-              cwd: /opt/onica-hello-world
+              command: /opt/onica-hello-world/onica-hello-world/bin/pip install uwsgi flask
             04_fixperms:
               command: "chown -R nginx: /opt/onica-hello-world"
           files:
             /opt/onica-hello-world/templates/hello.html:
+              owner: nginx
+              group: nginx
               content: !Join
                 - "\n"
                 - - '<!doctype html>'
@@ -330,6 +331,8 @@ Resources:
                   - '</center>'
                   - ''
             /opt/onica-hello-world/wsgi.py:
+              owner: nginx
+              group: nginx
               content: !Join
                 - "\n"
                 - - 'from onica import app as application'
@@ -338,6 +341,8 @@ Resources:
                   - '    application.run()'
                   - ''
             /opt/onica-hello-world/onica.ini:
+              owner: nginx
+              group: nginx
               content: !Join
                 - "\n"
                 - - '[uwsgi]'
@@ -358,6 +363,8 @@ Resources:
                   - 'daemonize = true'
                   - ''
             /opt/onica-hello-world/onica.py:
+              owner: nginx
+              group: nginx
               content: !Join
                 - "\n"
                 - - 'import socket'
@@ -469,7 +476,7 @@ Resources:
             #       - "WantedBy=multi-user.target"
             #       - ''
             /etc/init.d/onica:
-              mode: 000744
+              mode: '000744'
               owner: root
               group: root
               content: !Join
