--- a/approach1.cft.yaml
+++ b/approach1.cft.yaml
@@ -447,8 +447,9 @@ Resources:
                 files: /opt/onica-hello-world/onica.ini
           commands:
             01_start:
-              command: /etc/init.d/onica start
+              command: /etc/init.d/onica start 2>&1 | tee /var/log/onica.debug
               test: test "$(pgrep uwsgi | wc -l)" -ge 5
+              ignoreErrors: false
           files:
             # /etc/systemd/system/onica.service:
             #   content: !Join
@@ -628,7 +629,7 @@ Resources:
           - yum update -y aws-cfn-bootstrap
           - !Sub '/opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource LaunchConfig --region ${AWS::Region}'
           - !Sub '/opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WebServerGroup --region ${AWS::Region}'
-          - 'echo "Version 0.0.5'
+          - 'echo "Version 0.0.6'
           - ''
   WebServerScaleUpPolicy:
     Type: AWS::AutoScaling::ScalingPolicy
