--- a/approach1.cft.yaml
+++ b/approach1.cft.yaml
@@ -495,7 +495,7 @@ Resources:
                   - '### END INIT INFO'
                   - 'set -e'
                   - ''
-                  - ''
+                  - 'ulimit -a'
                   - 'PATH=/sbin:/bin:/usr/sbin:/usr/bin'
                   - 'DAEMON=/opt/onica-hello-world/onica-hello-world/bin/uwsgi'
                   - 'RUN_DIR=/var/run/onica'
@@ -630,7 +630,7 @@ Resources:
           - yum update -y aws-cfn-bootstrap
           - !Sub '/opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource LaunchConfig --region ${AWS::Region}'
           - !Sub '/opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WebServerGroup --region ${AWS::Region}'
-          - 'echo "Version 0.0.7'
+          - 'echo "Version 0.0.8'
           - ''
   WebServerScaleUpPolicy:
     Type: AWS::AutoScaling::ScalingPolicy
