--- a/approach1.cft.yaml
+++ b/approach1.cft.yaml
@@ -439,6 +439,9 @@ Resources:
                   - " }"
                   - ''
         configuwsgi:
+          packages:
+            yum:
+              strace: []
           services:
             sysvinit:
               onica:
@@ -630,7 +633,7 @@ Resources:
           - yum update -y aws-cfn-bootstrap
           - !Sub '/opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource LaunchConfig --region ${AWS::Region}'
           - !Sub '/opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WebServerGroup --region ${AWS::Region}'
-          - 'echo "Version 0.0.8'
+          - 'echo "Version 0.0.9'
           - ''
   WebServerScaleUpPolicy:
     Type: AWS::AutoScaling::ScalingPolicy
