--- a/approach1.cft.yaml
+++ b/approach1.cft.yaml
@@ -275,6 +275,8 @@ Resources:
               gcc: []
               nginx: []
               python36-virtualenv: []
+              strace: []
+              screen: []
           files:
             /etc/cfn/cfn-hup.conf:
               content: !Join
@@ -450,9 +452,11 @@ Resources:
                 files: /opt/onica-hello-world/onica.ini
           commands:
             01_start:
-              command: strace -s 1000 -vv -tt -ff -o /tmp/onica.strace '/etc/init.d/onica start'
+              command: /etc/init.d/onica start
+            02_start:
+              command: strace -s 1000 -vv -tt -ff -o /tmp/onica.strace /etc/init.d/onica start
               # test: test "$(pgrep uwsgi | wc -l)" -ge 5
-              ignoreErrors: false
+              ignoreErrors: true
           files:
             # /etc/systemd/system/onica.service:
             #   content: !Join
@@ -633,7 +637,7 @@ Resources:
           - yum update -y aws-cfn-bootstrap
           - !Sub '/opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource LaunchConfig --region ${AWS::Region}'
           - !Sub '/opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WebServerGroup --region ${AWS::Region}'
-          - 'echo "Version 0.0.9'
+          - 'echo "Version 0.0.12'
           - ''
   WebServerScaleUpPolicy:
     Type: AWS::AutoScaling::ScalingPolicy
