--- a/approach1.cft.yaml
+++ b/approach1.cft.yaml
@@ -441,9 +441,6 @@ Resources:
                   - " }"
                   - ''
         configuwsgi:
-          packages:
-            yum:
-              strace: []
           services:
             sysvinit:
               onica:
@@ -454,9 +451,9 @@ Resources:
             01_start:
               command: /etc/init.d/onica start
             02_start:
-              command: strace -s 1000 -vv -tt -ff -o /tmp/onica.strace /etc/init.d/onica start
+              command: /etc/init.d/onica start
               # test: test "$(pgrep uwsgi | wc -l)" -ge 5
-              ignoreErrors: true
+              # ignoreErrors: true
           files:
             # /etc/systemd/system/onica.service:
             #   content: !Join
@@ -637,7 +634,7 @@ Resources:
           - yum update -y aws-cfn-bootstrap
           - !Sub '/opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource LaunchConfig --region ${AWS::Region}'
           - !Sub '/opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WebServerGroup --region ${AWS::Region}'
-          - 'echo "Version 0.0.12'
+          - 'echo "Version 0.0.13'
           - ''
   WebServerScaleUpPolicy:
     Type: AWS::AutoScaling::ScalingPolicy
