--- a/approach1.cft.yaml
+++ b/approach1.cft.yaml
@@ -547,7 +547,7 @@ Resources:
                   - '{'
                   - '    local PIDFILE=$RUN_DIR/$NAME.pid'
                   - '    set +e'
-                  - '    [[ -f $PIDFILE ]] && kill $1 $(cat $PIDFILE) > /dev/null 2>&1'
+                  - '    [[ -f $PIDFILE ]] && kill -s $1 $(cat $PIDFILE) > /dev/null 2>&1'
                   - '    set -e'
                   - '}'
                   - ''
@@ -562,24 +562,24 @@ Resources:
                   - ''
                   - 'do_stop()'
                   - '{'
-                  - '    send_sig -3'
+                  - '    send_sig SIGINT'
                   - '    wait_and_clean_pidfile'
                   - '}'
                   - ''
                   - 'do_reload()'
                   - '{'
-                  - '    send_sig -1'
+                  - '    send_sig SIGHUP'
                   - '}'
                   - ''
                   - 'do_force_reload()'
                   - '{'
-                  - '    send_sig -15'
+                  - '    send_sig SIGTERM'
                   - '}'
                   - ''
                   - 'get_status()'
                   - '{'
                   - '    echo Onica Status:'
-                  - '    send_sig -10'
+                  - '    send_sig SIGUSR1'
                   - '}'
                   - ''
                   - 'case "$1" in'
@@ -634,7 +634,7 @@ Resources:
           - yum update -y aws-cfn-bootstrap
           - !Sub '/opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource LaunchConfig --region ${AWS::Region}'
           - !Sub '/opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WebServerGroup --region ${AWS::Region}'
-          - 'echo "Version 0.0.13'
+          - 'echo "Version 0.0.14'
           - ''
   WebServerScaleUpPolicy:
     Type: AWS::AutoScaling::ScalingPolicy
