No more fancy kill function that doesn't seem to work. version bump to 0.0.15

--- a/approach1.cft.yaml
+++ b/approach1.cft.yaml
@@ -499,7 +499,6 @@ Resources:
                   - '### END INIT INFO'
                   - 'set -e'
                   - ''
-                  - 'ulimit -a'
                   - 'PATH=/sbin:/bin:/usr/sbin:/usr/bin'
                   - 'DAEMON=/opt/onica-hello-world/onica-hello-world/bin/uwsgi'
                   - 'RUN_DIR=/var/run/onica'
@@ -514,6 +513,8 @@ Resources:
                   - '[[ -d $RUN_DIR ]] || mkdir $RUN_DIR && chown $OWNER:$GROUP $RUN_DIR'
                   - '[[ -d $LOG_DIR ]] || mkdir $LOG_DIR && chown $OWNER:$GROUP $LOG_DIR'
                   - ''
+                  - 'PIDFILE=$RUN_DIR/$NAME.pid'
+                  - ''
                   - 'do_pid_check()'
                   - '{'
                   - '    local PIDFILE=$1'
@@ -524,7 +525,6 @@ Resources:
                   - '    done'
                   - '    return 0'
                   - '}'
-                  - ''
                   - ''
                   - 'do_start()'
                   - '{'
@@ -543,14 +543,6 @@ Resources:
                   - '    fi'
                   - '}'
                   - ''
-                  - 'send_sig()'
-                  - '{'
-                  - '    local PIDFILE=$RUN_DIR/$NAME.pid'
-                  - '    set +e'
-                  - '    [[ -f $PIDFILE ]] && kill -s $1 $(cat $PIDFILE) > /dev/null 2>&1'
-                  - '    set -e'
-                  - '}'
-                  - ''
                   - 'wait_and_clean_pidfile()'
                   - '{'
                   - '    local PIDFILE=$RUN_DIR/$NAME.pid'
@@ -562,24 +554,24 @@ Resources:
                   - ''
                   - 'do_stop()'
                   - '{'
-                  - '    send_sig SIGINT'
+                  - '    kill -s SIGINT $(cat $PIDFILE)'
                   - '    wait_and_clean_pidfile'
                   - '}'
                   - ''
                   - 'do_reload()'
                   - '{'
-                  - '    send_sig SIGHUP'
+                  - '    kill -s SIGHUP $(cat $PIDFILE)'
                   - '}'
                   - ''
                   - 'do_force_reload()'
                   - '{'
-                  - '    send_sig SIGTERM'
+                  - '    kill -s SIGTERM $(cat $PIDFILE)'
                   - '}'
                   - ''
                   - 'get_status()'
                   - '{'
                   - '    echo Onica Status:'
-                  - '    send_sig SIGUSR1'
+                  - '    kill -s SIGUSR1 $(cat $PIDFILE)'
                   - '}'
                   - ''
                   - 'case "$1" in'
@@ -634,7 +626,7 @@ Resources:
           - yum update -y aws-cfn-bootstrap
           - !Sub '/opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource LaunchConfig --region ${AWS::Region}'
           - !Sub '/opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WebServerGroup --region ${AWS::Region}'
-          - 'echo "Version 0.0.14'
+          - 'echo "Version 0.0.15'
           - ''
   WebServerScaleUpPolicy:
     Type: AWS::AutoScaling::ScalingPolicy
